# OutscopeSDK

./: .gitignore  LICENSE  README.md  pyproject.toml
src/outscope_sdk/: client.py  config.py  exceptions.py  http.py
src/outscope_sdk/models/: check.py
src/outscope_sdk/resources/: checks.py  usage.py
tests/: test_checks.py
