[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "outscope-sdk"
version = "0.1.2"
description = "Python SDK for OutScope API"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "OutScope Team", email = "support@outscope.es" }]
dependencies = [
  "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "respx>=0.21",
  "ruff>=0.5",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

